--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Hussam Personal CV</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,9 +48,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Hussam Al-Homsi</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://github.com/Hussam1" class="twitter"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/hussam-al-homsi/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/Hussam1" target="_blank"  class="twitter"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/hussam-al-homsi/" target="_blank"   class="linkedin"><i class="bx bxl-linkedin"></i></a>
+
         </div>
+
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
@@ -60,7 +62,8 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <!--<li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>-->
+          <a href= "assets/img/Hussam_Resume.pdf" download="Hussam_CV.pdf"> Download CV &nbsp;<i class="bx bxs-down-arrow bx-border-circle"></i> </a>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -195,6 +198,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>Motivated, results-driven and experienced Data Scientist/Analyst with over 8 years of extensive and diversified experience in Data Science, Data Analysis, Management Consulting.</p>
+
         </div>
 
         <div class="row">
@@ -240,23 +244,36 @@
               <h5>2020 - Present</h5>
               <p><em>TRATON GROUP (Volkswagen Sister group), Sweden, Stockholm </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Led and managed day-to-day operations including data analysis, project management and internal consulting assignments</li>
+                <li>Demonstrate multiple data science POV (Proof of value)</li>
+                <li>Manage stakeholders relation and create project’s pipeline</li>
+                <li>Achieving 142% of target set in 2021</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Data Scientist - Manager</h4>
+              <h5>2018 - 2020</h5>
+              <p><em>KPMG Centre Of Excellence, Stockholm</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>As a data scientist at KPMG Centre Of Excellence I was primarily responsible for client facing and end-to-end customer engagement</li>
+                <li>Help clients identify business question, develop models to help solve their various business problems, making true impact where needed the most</li>
+                <li>Assist client investigate process optimization opportunity through process mining techniques, using python</li>
+                <li>Managed stakeholders. Prepared and presented proposals and presentations</li>
               </ul>
             </div>
+
+            <div class="resume-item">
+              <h4>Consultant</h4>
+              <h5>2017 - 2018</h5>
+              <p><em>Deloitte, Stockholm</em></p>
+              <ul>
+                <li>Project performed: Managing and implementing Business Intelligence System (government agency)</li>
+                <li>Tasks includes: identify and analyze preliminary business needs and translate the goals into programs and activities</li>
+              </ul>
+            </div>
+
+
+
           </div>
         </div>
 
@@ -510,7 +527,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!--<section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -518,81 +535,25 @@
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
-        <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
-              </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-            </div>
-
-          </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-
-        </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>--><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <!--<div class="copyright">
         &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
+      </div>-->
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
       </div>
     </div>
   </footer><!-- End  Footer -->
