--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Hussam Al-Homsi</h4>
               <p><em>In my daily tasks, I provide internal data science consultancy to different departments within the group, hence the projects I performed are diverse and varies greatly.</em></p>
@@ -239,6 +239,16 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Head of Digitalization and data management</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Scania Group - Parts & Services, Sweden, Stockholm </em></p>
+              <ul>
+                <li>Scania is part of TRATON group, and I was tasked to establish analytics department in Parts & Sales business after successfully establishing that on group holding level</li>
+                <li>Create, establish and manage analytics department</li>
+                <li>Manage stakeholders relation and create project’s pipeline</li>
+               </ul>
+            </div>
             <div class="resume-item">
               <h4>Data Scientist (Data Intelligence Function)</h4>
               <h5>2020 - Present</h5>
