--- a/index.html
+++ b/index.html
@@ -244,10 +244,8 @@
               <h5>2022 - Present</h5>
               <p><em>Scania Group - Parts & Services, Sweden, Stockholm </em></p>
               <ul>
-                <li>Scania is part of TRATON group, and I was tasked to establish analytics department in Parts & Sales business after successfully establishing that on group holding level</li>
-                <li>Create, establish and manage analytics department</li>
-                <li>Manage stakeholders relation and create project’s pipeline</li>
-               </ul>
+                <li>Scania is part of TRATON group, I was tasked to establish analytics department in Scania's Parts & Sales business after successfully establishing Data intelligence function at group holding level</li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Data Scientist (Data Intelligence Function)</h4>
