correcting the dot

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               Previously, I held positions as Data Scientist in KPMG Center of Excellence, a management consultant at KPMG Advisory, a business process consultant at Deloitte Sweden, Analyst and Project Manager.
             </p>
             <p>
-              The focus of the past few years has been mainly on leveraging advanced analytics (ML/AI technologies, process mining) in extracting business insights and driving business innovations forward..
+              The focus of the past few years has been mainly on leveraging advanced analytics (ML/AI technologies, process mining) in extracting business insights and driving business innovations forward.
             </p>
           </div>
         </div>
