correcting language and adding some leadership buzz words

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About Me:</h2>
-          <p>Data science enthusiast, I enjoy the challenge of extracting insights from data and I love telling its story through awesome visualization</p>
+      <!--    <p>Data science enthusiast, I enjoy the challenge of extracting insights from data and I love telling its story through awesome visualization</p> -->
         </div>
 
         <div class="row">
@@ -93,16 +93,19 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>What I have done so far:</h3>
+          <!--  <h3>What I have done so far:</h3> -->
             <p>
-              I have background in Management Consulting and Data Science, with focus on Machine Learning & AI, Data engineering, BI and Intelligent Automation. I work at the intersection between
-              management consulting and data science because I like to bring the data science ideas from early prototype to production with focus on business value.
+                I have a strong background in Management Consulting and Data Science, specializing in areas such as Machine Learning & AI, Data Engineering, Business Intelligence, and Intelligent Automation.
+                My unique expertise allow me to take data science ideas from their early prototype stages all the way to production, with a sharp focus on delivering tangible business value.
             </p>
             <p>
-              Previously, I held positions as Data Scientist in KPMG Center of Excellence, a management consultant at KPMG Advisory, a business process consultant at Deloitte Sweden, Analyst and Project Manager.
+             In my previous roles, I held position as a Data Scientist manager in KPMG Centre of Excellence Sweden, where I contributed to cutting-edge projects. Additionally, as a management consultant at KPMG Advisory, business process consultant at Deloitte Sweden, successfully leading diverse teams towards achieving project objectives.
             </p>
             <p>
-              The focus of the past few years has been mainly on leveraging advanced analytics (ML/AI technologies, process mining) in extracting business insights and driving business innovations forward.
+              Throughout my career, my primary emphasis has been on harnessing the power of advanced analytics, such as ML/AI technologies and process mining, to extract valuable business insights and propel innovation. I have consistently demonstrated an unwavering commitment to driving business growth and have a proven track record of delivering impactful results through the application of cutting-edge analytical techniques.
+            </p>
+            <p>
+             Overall, my professional journey has been dedicated to seamlessly merging management consulting and data science to deliver transformative solutions that enhance business operations and foster continuous improvement.
             </p>
           </div>
         </div>
@@ -197,7 +200,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Motivated, results-driven and experienced Data Scientist/Analyst with over 8 years of extensive and diversified experience in Data Science, Data Analysis, Management Consulting.</p>
+          <p>Dynamic, goal-oriented, and seasoned leader in Data Science, Management Consulting, and advisory, driven by a relentless pursuit of excellence.</p>
 
         </div>
 
@@ -206,7 +209,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Hussam Al-Homsi</h4>
-              <p><em>In my daily tasks, I provide internal data science consultancy to different departments within the group, hence the projects I performed are diverse and varies greatly.</em></p>
+              <p><em>My daily work encompasses a diverse range of projects from conducting intricate exploratory analyses and developing sophisticated statistical models, to leveraging cutting-edge machine learning techniques to solve complex business challenges, and delving into process mining for process optimization.</em></p>
               <ul>
                 <li>Sweden, Stockholm</li>
                 <li>hussamalhumsi@gmail.com</li>
@@ -290,9 +293,9 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>In my daily work, I provide support to many departments, hence the projects I take on varies greatly. They range from simple analysis (exploratory analysis), statistical modeling to building machine learning models to solve acute business problem or investigating process optimization through process mining.</p>
+          <p>While I am unable to disclose the specifics of my work with clients or my current company due to confidentiality, I would be pleased to provide you with descriptions during our personal meeting, outlining the contributions I have made in these endeavours!</p>
           <br>
-          <p><em>Please click on the project link to see the project descriptions!</em></p>
+          <p><em>These side projects are meant to serve as public demonstration of my programming and statistical skills!</em></p>
 
         </div>
 
